Remove extra class and fix image sizing when zooming out when listing all cryptocurrencies

--- a/javascript_projects/online_webapp/views/coin.ejs
+++ b/javascript_projects/online_webapp/views/coin.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs') %>
 <main class="container my-5">
   <div class="row g-5 about-page">
-    <div class="col-md-3 d-flex justify-content-center">
+    <div class="col-md-3 justify-content-center">
       <div class="position-sticky text-center" style="top: 2rem;">
         <h1 class="coin-name m-0"><%= data.name %></h1>
         <% if (data.logo === null || data.logo === "") { %>
