--- a/javascript_projects/online_webapp/public/styles/main.css
+++ b/javascript_projects/online_webapp/public/styles/main.css
@@ -54,6 +54,8 @@ body {
   height: 10vw;         /* scale height to 10% of viewport width */
   object-fit: contain;
   object-position: center;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 /* For written texts */
